Important: read the README file for installation instructions and important information about YafaRay

YafaRay v3.0.0-ALPHA5 (only for developers testing) (2016-05-17) for Blender 2.77a:
----------------------------------------------
** IMPORTANT **
----------------------------------------------
The new YafaRay-v3 will *NOT* replace the existing YafaRay versions, and it can be installed *in addition* to them.
So, YafaRay-v3 *must* be enabled in Blender user preferences, and in your current YafaRay scenes you have to switch to the renderer "YafaRay-v3" to use the new version.

If you want to keep old versions and the new v3 together, make sure you enable in Blender first the old and then the new v3 in that order. If you have problems, disable both, restart Blender and enable them in that order.

Also, support has been DROPPED for Windows XP and MacOSX v10.6
----------------------------------------------

YafaRay-v3 has gone through deep changes to the code. Even if there are no apparent big changes, the underlying code has undergone a lot of modifications. So, this is an ALPHA/unstable version, only for developers testing

Major codebase changes in v3.0.0:
* Dropped support for Windows XP and MacOSX v10.6. Sorry, but the code changes required this.

* Updated for Blender 2.77 (using Python 3.5).

* Codebase updated from old standard C++98 to the new C++11. This will allow better and easier code maintenance as well as access to newer C++ features to improve YafaRay even more in the future.

* Entire old MultiThreading system replaced by new standard C++11 threads system.

* Windows-MinGW C++11 MultiThreading system using now the library https://github.com/meganz/mingw-std-threads  This should significantly improve render speed in Windows in many scenes by reducing the multithreading overhead.

* Added several Boost libraries to allow saving/loading photon map files and improve unicode/multiplatform compatibility. 
